Se integra font, y estilos de la parte principal del blog

--- a/projects/blog-stephanie/src/assets/scss/blk-design-system/custom/_variables.scss
+++ b/projects/blog-stephanie/src/assets/scss/blk-design-system/custom/_variables.scss
@@ -112,7 +112,7 @@ $warning-states: #ff6491 !default;
 $danger-states: #ec250d !default;
 $black-states: #1d253b !default;
 
-$background-black: #171941 !default;
+$background-black: #2c0d55 !default; // background
 $background-states-black: #1e1e24 !default;
 
 // opacity
