--- a/projects/blog-stephanie/src/styles.css
+++ b/projects/blog-stephanie/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: 'Scriptina_Pro';
+    src: url('./assets/fonts/Scriptina_Pro-webfont.woff2') format('woff2'),
+         url('./assets/fonts/Scriptina_Pro-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
