--- a/projects/blog-stephanie/src/app/layout/menu/menu.component.scss
+++ b/projects/blog-stephanie/src/app/layout/menu/menu.component.scss
@@ -2,4 +2,14 @@ nav {
     -webkit-box-shadow: 0 8px 20px rgba(0,0,0,.3), 0 0 40px rgba(0,0,0,.1) inset;
     -moz-box-shadow: 0 8px 20px rgba(0,0,0,.3),0 0 40px rgba(0,0,0,.1) inset;
     box-shadow: 0 8px 20px rgba(0,0,0,.3), 0 0 40px rgba(0,0,0,.1) inset;
+    padding-top: 0px !important;
+    padding-bottom: 0px!important;
+    padding-left: 10px!important;
+    padding-right: 10px!important;
+}
+
+.quit-margin{
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+    max-width: 95% !important;
 }
