Se integra google iniciación de sesion, falta guardar bien el token

--- a/projects/blog-stephanie/src/app/app.component.html
+++ b/projects/blog-stephanie/src/app/app.component.html
@@ -1,5 +1,5 @@
 <menu></menu>
 <router-outlet></router-outlet>
-<div class="section section-download" data-background-color="black" #target>
-  daskldsaj
-</div>
+<!--<div class="section section-download" data-background-color="black" #target>
+  [footer]
+</div>-->
