--- a/projects/blog-stephanie/src/app/compontents/blog/blog.component.html
+++ b/projects/blog-stephanie/src/app/compontents/blog/blog.component.html
@@ -1,7 +1,7 @@
 <div class="page-header">
     <div class="content-center">
         <div class="row">
-            blogggggasddas
+            blogggggasddassaddsa
         </div>
     </div>
 </div>
