--- a/projects/blog-stephanie/src/app/layout/menu/menu.component.html
+++ b/projects/blog-stephanie/src/app/layout/menu/menu.component.html
@@ -115,14 +115,33 @@
             </a>-->
           </div>
         </li>
-        <li class="nav-item">
+        <li *ngIf="!sesionUp" class="nav-item">
           <a
             class="nav-link btn btn-default d-none d-lg-block"
             [routerLink]="['/login']"
           >
             <i class="tim-icons icon-lock-circle"> </i> Login
           </a>
+        </li> 
+        <li  *ngIf="sesionUp && sesionUp.google" class="nav-item">
+           <a
+            class="nav-link btn btn-default d-none d-lg-block"
+            [routerLink]="['/login']"
+          >
+            {{sesionUp.name}}
+            <img [src]="sesionUp.imgUri" alt="" srcset="" height="30">
+          </a>
         </li>
+        <li  *ngIf="sesionUp && !sesionUp.google" class="nav-item">
+          <a
+           class="nav-link btn btn-default d-none d-lg-block"
+           [routerLink]="['/login']"
+         >
+           {{sesionUp.mail}}
+           <i class="tim-icons icon-person"></i>
+         </a>
+       </li>
+        
       </ul>
     </div>
   </div>
