--- a/projects/blog-stephanie/src/app/components/admin/sections/sections.component.html
+++ b/projects/blog-stephanie/src/app/components/admin/sections/sections.component.html
@@ -1,3 +1,37 @@
+<!--{{ displayColumns | json}}-->
+<table class="table table-striped" *ngIf="displayColumns">
+    <thead>
+        <tr>
+            <th *ngFor="let column of displayColumns" scope="col">{{column}}</th>
+        </tr>
+    </thead>
+</table>
+<!--<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col" sortable="name" (sort)="onSort($event)">Country</th>
+            <th scope="col" sortable="area" (sort)="onSort($event)">Area</th>
+            <th scope="col" sortable="population" (sort)="onSort($event)">Population</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let country of countries$ | async">
+            <th scope="row">{{ country.id }}</th>
+            <td>
+                <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2"
+                    style="width: 20px">
+                <ngb-highlight [result]="country.name" [term]="service.searchTerm"></ngb-highlight>
+            </td>
+            <td>
+                <ngb-highlight [result]="country.area | number" [term]="service.searchTerm"></ngb-highlight>
+            </td>
+            <td>
+                <ngb-highlight [result]="country.population | number" [term]="service.searchTerm"></ngb-highlight>
+            </td>
+        </tr>
+    </tbody>
+</table>-->
 <div class="buscador">
     <div class="row">
         <div class="col-12">
@@ -11,23 +45,13 @@
             <h5>Id:</h5>
         </div>
         <div class="col-3 text-left">
-            <input
-                  class="form-control"
-                  placeholder="Regular"
-                  type="text"
-                  value=""
-                />
+            <input class="form-control" placeholder="Regular" type="text" value="" />
         </div>
         <div class="col-2 text-right align-self-center">
             <h5>Nombre:</h5>
         </div>
         <div class="col-3 text-left">
-            <input
-                  class="form-control"
-                  placeholder="Regular"
-                  type="text"
-                  value=""
-                />
+            <input class="form-control" placeholder="Regular" type="text" value="" />
         </div>
         <div class="col-2 justify-content-end">
             <button class="btn btn-neutral btn-round" (click)="buscar()">Buscar</button>
@@ -37,23 +61,24 @@
 <div class="table-section">
     <table class="table table-striped">
         <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Country</th>
-          <th scope="col">Area</th>
-          <th scope="col">Population</th>
-        </tr>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Country</th>
+                <th scope="col">Area</th>
+                <th scope="col">Population</th>
+            </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let country of countries; index as i">
-          <th scope="row">{{ i + 1 }}</th>
-          <td>
-            <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2" style="width: 20px">
-            {{ country.name }}
-          </td>
-          <td>{{ country.area | number }}</td>
-          <td>{{ country.population | number }}</td>
-        </tr>
+            <tr *ngFor="let country of countries; index as i">
+                <th scope="row">{{ i + 1 }}</th>
+                <td>
+                    <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2"
+                        style="width: 20px">
+                    {{ country.name }}
+                </td>
+                <td>{{ country.area | number }}</td>
+                <td>{{ country.population | number }}</td>
+            </tr>
         </tbody>
-      </table>
+    </table>
 </div>
